--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,8 @@
-*{
+{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    text-decoration: underline overline;
+    text-decoration: none;
     list-style: none;
     font-family: 'Overpass', sans-serif;
     caret-color: transparent;
