--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    text-decoration: none;
+    text-decoration: line-through;
     list-style: none;
     font-family: 'Overpass', sans-serif;
     caret-color: transparent;
