--- a/ARFAZ.css
+++ b/ARFAZ.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    text-decoration: underline overline;
+    text-decoration: overline;
     list-style: none;
     font-family: 'Overpass', sans-serif;
     caret-color: transparent;
@@ -14,6 +14,7 @@ body{
     background-repeat: no-repeat;
     color: rgba(6, 20, 78, 0.089);
     background: linear-gradient(rgba(0, 0, 255, 0.267), rgba(255, 0, 0, 0.185));
+/* cosa */
 
 }
 
