--- a/estilo.css
+++ b/estilo.css
@@ -2,9 +2,9 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    text-decoration: line-through;
+    text-decoration: none;
     list-style: none;
-    font-family: 'Overpass', sans-serif;
+    font-family: none;
     caret-color: transparent;
     scroll-behavior: smooth;
 }
