--- a/estilo.css
+++ b/estilo.css
@@ -20,7 +20,7 @@ p{
     color: brown;
     font: icon bold;
     padding: 500px;
-    text-align: center;
+   
 }
 h1{
     color: grey;
@@ -32,6 +32,11 @@ h1{
     left: 50%;
     top: 50%;
     transform: translate(50%); 
+    margin-top: 40px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 
