--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -1,34 +1,38 @@
+*{
+    align-items: center;
+}
 .carousel {
     width: 500px;
     height: 300px;
     overflow: hidden;
     }
-        
+
     .carousel-inner {
      width: 100%;
      height: 100%;
      display: flex;
     transition: transform 0.3s ease-in-out;
     }
-        
+
     .carousel-item {
-     flex: 0 0 500px;
-    height: 100%;
+        width: center;
+     flex:0 500px;
+    height: 1000%;
+
      }
-        
+
     .carousel-item img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      }
-        
-        .carousel-btn {
+.carousel-btn {
      display: flex;
      justify-content: space-between;
      align-items: center;
      margin-top: 10px;
      }
-        
+
     .carousel-btn button {
      padding: 5px;
     }
