--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -5,8 +5,8 @@
     }
 
     .carousel-inner {
-     width: 100%;
-     height: 100%;
+     width: 75%;
+     height: 75%;
      display: flex;
     transition: transform 0.3s ease-in-out;
     }
@@ -30,5 +30,9 @@
       
     .carousel-btn button {
      padding: 5px;
+     justify-content: center;
+     border-radius: 5px;
+     font-size: 20px;
+     color: brown;
     }
   
