--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -1,6 +1,5 @@
 .carousel {
     width: 500px;
-    height: 300px;
     overflow: hidden;
     }
 
@@ -8,7 +7,7 @@
      width: 75%;
      height: 75%;
      display: flex;
-    
+    transition: transform 0.5s ease-in-out;
     }
 
     .carousel-item {
@@ -18,8 +17,7 @@
 
     .carousel-item img {
      width: 100%;
-     height: 100%;
-     object-fit: cover;
+     height: auto;
      }
     .carousel-btn {
      display: flex;
