--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -81,7 +81,9 @@ body {
 	cursor: pointer;
 	background-color: var(--transparent-grey); 
 }
-
+.slide{
+    width: 100%; height: 36px; left: 100%;
+}
 #next {
 	left: 100%; 
 	transform: translate(-100%, -50%); 
