--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -82,7 +82,7 @@ body {
 	background-color: var(--transparent-grey); 
 }
 .slide{
-    width: 100%; height: 36px; position: relative;
+    width: 100%; height: 36px; align : ”middle”;
 }
 #next {
 	left: 100%; 
