--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -46,7 +46,7 @@ body {
 	background-color: var(--transparent-grey); 
 }
 .slide{
-    width: 100%; height: auto; align : ”middle”;
+    width: 100%; height: 45px; align:”middle”;
 }
 #next {
 	left: 100%; 
