--- a/estilocarrousel.css
+++ b/estilocarrousel.css
@@ -101,3 +101,9 @@ body {
 .activeDot {
 	background-color: rgba(0,0,0,0.6); 
 }
+
+h6 {
+ font-family: Georgia, 'Times New Roman', Times, serif;
+ background-color: #333;
+text-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px;
+}
