--- a/estilo.css
+++ b/estilo.css
@@ -78,6 +78,21 @@ background-color: #232323;
 text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #49ff18, 0 0 30px #49FF18, 0 0 40px #49FF18, 0 0 55px #49FF18, 0 0 75px #49ff18
 }
 
+.columna3 {
+  border: 5px double #4b15258c;
+  text-align: center;
+  background-color: beige;
+  padding: 40px;
+  margin: 0px 0px;
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 1000px; /*colocando el 100% permite agrandar lo maximo posible la columna*/
+  border-bottom-left-radius: 4px;
+  color: #FFF;
+background-color: #1e306efb;
+text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #49ff18, 0 0 30px #49FF18, 0 0 40px #49FF18, 0 0 55px #49FF18, 0 0 75px #49ff18
+}
 
 
 
